fixed alignment options

--- a/styles.css
+++ b/styles.css
@@ -34,12 +34,10 @@ body {
 .Logo1 {
   width: 120px;
   height: 120px;
-  /* background-color: gray; */
   margin-left: 10px;
 }
 .imageLogo {
   width: 100px;
-  /* margin-left: 10px; */
   padding: 10px;
 }
 .Banner {
@@ -48,7 +46,7 @@ body {
 }
 .twoColumnstextBlock {
   /* width: 100%; */
-  height: 400px;
+  height: auto;
   /* background-color: gray; */
   display: grid;
   grid-template-columns: 50% 50%;
@@ -56,7 +54,7 @@ body {
 .textBlocksContentOverview {
   /* width: 100%; */
   width: 80%;
-  height: 140px;
+  height: auto;
   background-color: white;
   /* margin: 3% auto; */
   margin: auto;
@@ -132,7 +130,6 @@ hr {
 .CourseIntroduction {
   width: 100%;
   height: 420px;
-  /* background-color: lightgray; */
   text-align: center;
 }
 iframe {
@@ -158,9 +155,7 @@ iframe {
 .Logo2 {
   width: 120px;
   height: 120px;
-  /* background-color: gray; */
   margin: 10% auto;
-  /* margin-right: 10px; */
 }
 
 .imageGallery {
